<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/bottom_nav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:background="@color/colorButtonPressed">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:id="@+id/search_nav"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:layout_marginTop="2dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/history_nav"
            android:text="@string/history"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:layout_marginTop="2dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favorites_nav"
            android:text="@string/favorites"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:layout_marginTop="2dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

